# misis

./: README.md
undalov_n_s/: CMakeLists.txt
undalov_n_s/.svn/: wc.db
undalov_n_s/bin.win32.vc2015.dbg/: Matrix.ilk  complex.ilk  dynamic_array.ilk  rational.ilk  test_complex.ilk  test_dynamic_array.ilk  test_matrix.ilk  test_priority_queue.ilk  test_queue.ilk  test_rational.ilk  test_stack_on_list.ilk
undalov_n_s/course_work/: CMakeLists.txt
undalov_n_s/course_work/client/: CMakeLists.txt  client.cpp  client.h  client_controller.cpp  client_controller.h  commands.txt  config.json  configuration_manager.cpp  configuration_manager.h  console.h  file_systeam.cpp  file_systeam.h  interface.cpp  interface.h  main.cpp
undalov_n_s/course_work/client/additionals/: config.json
undalov_n_s/course_work/client/additionals/info/: commands.txt
undalov_n_s/course_work/server/: CMakeLists.txt  client.cpp  client.h  client_server.cpp  client_server.h  config.json  configuration_manager.cpp  configuration_manager.h  configuration_manager_server.cpp  configuration_manager_server.h  file_systeam.cpp  file_systeam.h  main.cpp  server.cpp  server.h  session.cpp  session.h
undalov_n_s/course_work/server/additionals/: config.json
undalov_n_s/course_work/shared/: CMakeLists.txt  console.cpp  console.h  enums.h  file_systeam.cpp  file_systeam.h
undalov_n_s/prj.labs/: CMakeLists.txt
undalov_n_s/prj.labs/Matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
undalov_n_s/prj.labs/complex/: CMakeLists.txt  Complex.h  complex.cpp  index.cpp
undalov_n_s/prj.labs/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  main.cpp
undalov_n_s/prj.labs/priority_queue/: CMakeLists.txt  priority_queue.cpp  priority_queue.h
undalov_n_s/prj.labs/queue/: CMakeLists.txt  main.cpp  queue.cpp  queue.h
undalov_n_s/prj.labs/rational/: AdditionalFunction.cpp  AdditionalFunction.h  CMakeLists.txt  Main.cpp  rational.cpp  rational.h
undalov_n_s/prj.labs/stack_on_list/: CMakeLists.txt  main.cpp  stack.h
undalov_n_s/prj.samples/minimal_program/: minimal_program.cpp
undalov_n_s/tests/: CMakeLists.txt
undalov_n_s/tests/complex/: CMakeLists.txt  main.cpp
undalov_n_s/tests/dynamic_array/: CMakeLists.txt  main.cpp
undalov_n_s/tests/matrix/: CMakeLists.txt  main.cpp
undalov_n_s/tests/priority_queue/: CMakeLists.txt  main.cpp
undalov_n_s/tests/queue/: CMakeLists.txt  main.cpp
undalov_n_s/tests/rational/: CMakeLists.txt  main.cpp
undalov_n_s/tests/stack_on_list/: CMakeLists.txt  main.cpp
